kustomize/bases/ai/ollama/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  labels:
    app.kubernetes.io/name: ollama
    app.kubernetes.io/component: llm
    app.kubernetes.io/part-of: ai
    app.kubernetes.io/instance: ai-ollama
    app.kubernetes.io/version: "0.1.33"
spec:
  type: ClusterIP
  ports:
    - port: 11434
      targetPort: 11434
  selector:
    app.kubernetes.io/name: ollama
    app.kubernetes.io/instance: ai-ollama
