kustomize/bases/ai/ollama/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama
  # These are not needed by considered a good practice
  labels:
    app.kubernetes.io/name: ollama
    app.kubernetes.io/component: llm
    app.kubernetes.io/part-of: ai
    app.kubernetes.io/instance: ai-ollama
    app.kubernetes.io/version: "0.1.33"
  annotations:
    # Use only 80 and 443 entrypoint
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
    - host: ollama.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollama
                port:
                  number: 11434
